Consistent formatting using google-java-format